# Meta-AWS-Capstone

./: .gitignore  LICENSE  README.md  diagram.py
backend/: .env  Pipfile  README.md  backup.sql  lambda_function.py  manage.py  manage_local.sh  notes.txt  openapi-schema.yaml  requirements.txt
backend/LittleLemon/: Pipfile  ckerfile  comands.txt  lambda_function.py  requirements.txt  settings.py  zappa_settings.json
frontend/: .ebignore  .gitIgnore  .gitignore  Pipfile  Procfile  README.md  comands.txt  logs.txt  requirements-dev.in  requirements.txt  run-local.sh  run-prod.sh  run.sh
frontend/.ebextensions/: 01_nginx_health.config  django.config
frontend/.elasticbeanstalk/: config.yml
frontend/core/: urls.py  wsgi.py
frontend/frontend/: settings.py
frontend/ui_app/: apps.py  forms.py  urls.py  views.py  views.txt
littlelemon/: comands.txt
littlelemon-backend-cdk/: .gitignore  README.md  app.py  cdk.context.json  deploy.sh  package-lock.json  package.json  requirements-dev.txt
littlelemon-backend-cdk/cdk.out/: ApiGatewayStack.assets.json  ApiGatewayStack.template.json  ComputeStack.assets.json  ComputeStack.template.json  DatabaseStack.assets.json  DatabaseStack.template.json  LambdaStack.assets.json  LambdaStack.template.json  MinimalApiStack.assets.json  MinimalApiStack.template.json  NetworkStack.assets.json  NetworkStack.template.json  manifest.json  tree.json
littlelemon-backend-cdk/lib/: compute_stack.py  database_stack.py  (+1 more)
littlelemon-documentation/: README.md  diagram.py  pyproject.toml
littlelemon-documentation/api/: endpoints.md
(+65 files in other folders)
